syntax = "proto3";

package datapb;

import "google/api/annotations.proto";

enum Scope {
    Public = 0;
    Personal = 1;
    ContextRestricted = 2;
}

message AttributeDefinition {
    string id = 1;
    string label = 2;
    string mime = 3;
    string description = 4;
    bool unique = 5;
    Scope scope = 6;
}

message Attribute {
    string id = 1;
    string context = 2;
    string mime = 3;
    string uri = 4;
}

message Query {
    string subject = 1;
    repeated string attribute_ids = 2;
}


service DataStore {
    rpc SetAttributes(SetAttributesRequest) returns (SetAttributesResponse) {
        option(google.api.http) = {
            post: "/data/set";
            body: "*";
        };
    };
    rpc GetAttributes(GetAttributesRequest) returns (GetAttributesResponse) {
        option(google.api.http) = {
            post: "/data/get";
            body: "*";
        };
    };

    rpc DeleteAttributes(DeleteAttributesRequest) returns (DeleteAttributesResponse) {
        option (google.api.http) = {
            post: "/data/delete";
            body: "*";
        };
    }
}

message SetAttributesRequest {
    string subject = 1;
    repeated Attribute attributes = 2;
}
message SetAttributesResponse {}

message GetAttributesRequest {
    Query query = 1;
}
message GetAttributesResponse {
    repeated Attribute attributes = 1;
}

message DeleteAttributesRequest {
    Query query = 1;

}
message DeleteAttributesResponse {}